--- a/extraction_app/templates/extraction_app/list.html
+++ b/extraction_app/templates/extraction_app/list.html
@@ -1,10 +1,14 @@
 {% extends 'extraction_app/base.html' %}
 {% block content %}
-      <form method="get">
+    <form method="get">
         {{ filter.form.as_p }}
-        <input type="submit" />
+        <input type="submit"/>
     </form>
-    {% for obj in filter.qs %}
-        {{ obj.title }} - {{ obj.year }}<br />
-    {% endfor %}
+    <ul>
+        {% for obj in filter.qs %}
+            <li>
+                <a href="{% url 'work_detail' obj.id %}">  {{ obj.title }} - {{ obj.year }}</a>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
