Use dynamic url

--- a/extraction_app/templates/extraction_app/extract_success.html
+++ b/extraction_app/templates/extraction_app/extract_success.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>Extraction Successful</h1>
-    <a href="/">Home</a>
+    <a href="{% url 'work_list' %}">List</a>
 {% endblock %}
